--- a/views/chitiet.ejs
+++ b/views/chitiet.ejs
@@ -4,15 +4,20 @@
 <title>Wing the Air</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+<link rel="stylesheet" href="css/chitiet.css" type="text/css" media="all" />
 <!--[if lte IE 6]><style type="text/css" media="screen">.tabbed { height:420px; }</style><![endif]-->
 <script src="js/jquery-1.4.1.min.js" type="text/javascript"></script>
 <script src="js/jquery.jcarousel.pack.js" type="text/javascript"></script>
 <script src="js/jquery.slide.js" type="text/javascript"></script>
 <script src="js/jquery-func.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Top -->
-<div id="top">
+<div id="top" >
   <div class="shell">
     <!-- Header -->
     <div id="header">
@@ -29,16 +34,37 @@
     </div>
     <!-- End Header -->
     <!-- Slider -->
-    <div id="slider">
-      <div id="slider-holder">
-        <ul>
-          <li><a href="#"><img src="css/images/slide1.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide2.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide3.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide4.jpg" alt="" /></a></li>
-        </ul>
+    <div id="slider" style="margin-bottom:10px; position:absolute;">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="css/images/slide1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide3.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide4.jpg" alt="Finally">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <div id="slider-nav"> <a href="#" class="prev">Previous</a> <a href="#" class="next">Next</a> </div>
     </div>
     <!-- End Slider -->
   </div>
@@ -70,16 +96,16 @@
           <li><a href="page-1">Danh sách sản phẩm</a></li>
           <li><a href="">Thể loại</a>
             <ul class="typebook">
-              <li style="margin-left:0px;"><a href="theloai-langmang">Chủ nghĩa lãng mạng</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kinhdi">Kinh dị</a></li>
-              <li style="margin-left:0px;"><a href="theloai-tieuthuyet">Tiểu thuyết</a></li>
-              <li style="margin-left:0px;"><a href="theloai-hucau">Hư cấu</a></li>
-              <li style="margin-left:0px;"><a href="theloai-hanhdong">Hành động</a></li>
-              <li style="margin-left:0px;"><a href="theloai-tho">Thơ</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kiemhiep">Truyện kiếm hiệp</a></li>
-              <li style="margin-left:0px;"><a href="theloai-khoahoc">Khoa học</a></li>
-              <li style="margin-left:0px;"><a href="theloai-congnghe">Công nghệ</a></li>
-              <li style="margin-left:0px;"><a href="theloai-hoctap">Học tập</a></li>
+              <li><a href="theloai-truyenngan-1">Truyện ngắn</a></li>
+              <li><a href="theloai-truyentranh-1">Truyện tranh</a></li>
+              <li><a href="theloai-giaoduc-1">Giáo dục</a></li>
+              <li><a href="theloai-kinangsong-1">Kĩ năng sống</a></li>
+              <li><a href="theloai-kinhte-1">Kinh tế</a></li>
+              <li><a href="theloai-tamly-1">Tâm lý</a></li>
+              <li><a href="theloai-giaokhoa-1">Sách giáo khoa</a></li>
+              <li><a href="theloai-vanhoc-1">Văn học</a></li>
+              <li><a href="theloai-ngoaingu-1">Ngoại ngữ</a></li>
+              <li><a href="theloai-cotich-1">Truyện cổ tích</a></li>
             </ul>
           </li>
         </ul>
@@ -87,34 +113,56 @@
       <!-- Tabs -->
 
       <!-- Container -->
-      <div id="container">
+      <div id="container" style="margin-top:-15px;">
         <div class="tabbed">
-          <div style="width:400px; height:400px; background-color:red; float:left;">
-            <img src="images/gtxaacct1.jpg" width="100%" height="100%"/>
+          <div style="width:400px; height:400px; float:left;">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <% var n = 0; images.forEach(function(i){
+                  if(n==0){ %>
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="<%= i.imageurl %>"  width="400px;" height="400px;">
+                    </div>
+                  <% n=1; } else { %>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="<%= i.imageurl %>" width="400px;" height="400px;">
+                    </div>
+                    <% } %>
+                  <% }) %>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
-          <div style="float:left; height:320px; margin-left:50px; margin-top: 80px;">
-            <div id="bookname" style="font-size:25px; line-height: 1; width:400px; height:auto">Xin chao</div>
-            <div id="author" style="margin-top: 10px; ">Tác giả</div>
-            <div id="typebook" style="margin-top: 10px;margin-top: 10px;">Thể loại</div>
-            <div id="bookprice" style="margin-top: 10px;margin-top: 10px;">Giá</div>
-            <div id="viewsbook" style="margin-top: 10px; margin-bottom: 50px;">Lượt xem</div>
-            <div style="width:100px; margin-top:10px; float:left;">
+          <div style="float:left; height:320px; margin-left:50px; margin-top: 50px;">
+            <div style="font-size:25px; line-height: 1; width:400px; height:auto">Tên sách: <%= book.bookname %></div>
+            <div id="author">Tác giả: <%= book.author  %></div>
+            <div id="typebook">Thể loại: <%= book.booktype %></div>
+            <div id="bookprice">Giá: <%= book.bookprice %> VNĐ</div>
+            <div id="viewsbook">Lượt xem: <%= book.viewsbook %></div>
+            <div style="width:120px; margin-top:10px; float:left;">
               <p>Số lượng: </p>
               <div style="float:left;"><input type="button" name="tru" id="tru" value="&nbsp&nbsp-&nbsp&nbsp" onclick="tru()"/></div>
-              <div style="float:left;"><input align="center" type="text" name="soluong" id="soluong" value="1" size="1" onchange="soluong()"/></div>
+              <div style="float:left;"><input align="center" type="text" name="soluong" id="soluong" value="1" size="1" style="text-align:center;" onchange="soluong()"/></div>
               <div style="float:left;"><input type="button" name="cong" id="cong" value="&nbsp&nbsp+&nbsp&nbsp" onclick="cong()"/></div>
             </div>
-            <div style="height:50px; width: 220px; float:left; margin-left:30px;">
+            <div class="addtocart">
               <a href="#"><img src="css/images/addtocart.png" width="100%" height="100%"/></a>
             </div>
-            <div style="float:left; width:50px; height:50px; margin-left:20px;">
+            <div class="smile">
               <img src="css/images/smile.jpg" width="100%" height="100%"/>
             </div>
           </div>
         </div>
         <div style="margin-top:10px; border-top:dashed 1px #cfcfcf;">
           <p style="font-size:30px; margin-top:10px;">Giới thiệu sách</p>
-          <p id = "bookcontent" style="font-size: 15px; line-height: 1.5; margin-top:20px;"></p>
+          <p style="font-size: 15px; line-height: 1.5; margin-top:20px;"><%= book.bookcontent %></p>
         </div>
         <!-- Brands
         <div class="brands">
