--- a/views/phantrang.ejs
+++ b/views/phantrang.ejs
@@ -9,10 +9,14 @@
 <script src="js/jquery.jcarousel.pack.js" type="text/javascript"></script>
 <script src="js/jquery.slide.js" type="text/javascript"></script>
 <script src="js/jquery-func.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Top -->
-<div id="top">
+<div id="top" >
   <div class="shell">
     <!-- Header -->
     <div id="header">
@@ -29,16 +33,37 @@
     </div>
     <!-- End Header -->
     <!-- Slider -->
-    <div id="slider">
-      <div id="slider-holder">
-        <ul>
-          <li><a href="#"><img src="css/images/slide1.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide2.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide3.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide4.jpg" alt="" /></a></li>
-        </ul>
+    <div id="slider" style="margin-bottom:10px; position:absolute;">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="css/images/slide1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide3.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide4.jpg" alt="Finally">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <div id="slider-nav"> <a href="#" class="prev">Previous</a> <a href="#" class="next">Next</a> </div>
     </div>
     <!-- End Slider -->
   </div>
@@ -70,16 +95,16 @@
           <li><a href="page-1">Danh sách sản phẩm</a></li>
           <li><a href="">Thể loại</a>
             <ul class="typebook">
-              <li style="margin-left:0px;"><a href="theloai-truyenngan">Truyện ngắn</a></li>
-              <li style="margin-left:0px;"><a href="theloai-truyentranh">Truyện tranh</a></li>
-              <li style="margin-left:0px;"><a href="theloai-giaoduc">Giáo dục</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kinangsong">Kĩ năng sống</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kinhte">Kinh tế</a></li>
-              <li style="margin-left:0px;"><a href="theloai-tamly">Tâm lý</a></li>
-              <li style="margin-left:0px;"><a href="theloai-giaokhoa">Sách giáo khoa</a></li>
-              <li style="margin-left:0px;"><a href="theloai-vanhoc">Văn học</a></li>
-              <li style="margin-left:0px;"><a href="theloai-ngoaingu">Ngoại ngữ</a></li>
-              <li style="margin-left:0px;"><a href="theloai-cotich">Truyện cổ tích</a></li>
+              <li><a href="theloai-truyenngan-1">Truyện ngắn</a></li>
+              <li><a href="theloai-truyentranh-1">Truyện tranh</a></li>
+              <li><a href="theloai-giaoduc-1">Giáo dục</a></li>
+              <li><a href="theloai-kinangsong-1">Kĩ năng sống</a></li>
+              <li><a href="theloai-kinhte-1">Kinh tế</a></li>
+              <li><a href="theloai-tamly-1">Tâm lý</a></li>
+              <li><a href="theloai-giaokhoa-1">Sách giáo khoa</a></li>
+              <li><a href="theloai-vanhoc-1">Văn học</a></li>
+              <li><a href="theloai-ngoaingu-1">Ngoại ngữ</a></li>
+              <li><a href="theloai-cotich-1">Truyện cổ tích</a></li>
             </ul>
           </li>
         </ul>
@@ -87,84 +112,24 @@
       <!-- Tabs -->
 
       <!-- Container -->
-      <div id="container">
+      <div id="container" style="margin-top:-15px;">
         <div class="tabbed">
           <!-- First Tab Content -->
           <div class="items">
             <div class="cl">&nbsp;</div>
             <ul>
-              <li id ="s1">
-                <div class="image"> <a href="#" id="link1"><img id = "hs1" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts1"></span><br />
-                  <span id = "ls1"></span><br /></p>
-                <p class="price"><strong id = "gs1"></strong></p>
-              </li>
-              <li id ="s2">
-                <div class="image"> <a href="#" id="link2"><img id = "hs2" src="" width="100%" height="100%"/></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts2"></span><br />
-                  <span id = "ls2"></span><br /></p>
-                <p class="price"><strong id = "gs2"></strong></p>
-              </li>
-              <li id ="s3">
-                <div class="image"> <a href="#" id="link3"><img id = "hs3" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts3"></span><br />
-                  <span id = "ls3"></span><br /></p>
-                <p class="price"><strong id = "gs3"></strong></p>
-              </li>
-              <li id ="s4">
-                <div class="image"> <a href="#" id="link4"><img id = "hs4" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts4"></span><br />
-                  <span id = "ls4"></span><br /></p>
-                <p class="price"><strong id = "gs4"></strong></p>
-              </li>
-              <li id ="s5">
-                <div class="image"> <a href="#" id="link5"><img id = "hs5" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts5"></span><br />
-                  <span id = "ls5"></span><br /></p>
-                <p class="price"><strong id = "gs5"></strong></p>
-              </li>
-              <li id ="s6">
-                <div class="image"> <a href="#" id="link6"><img id = "hs6" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts6"></span><br />
-                  <span id = "ls6"></span><br /></p>
-                <p class="price"><strong id = "gs6"></strong></p>
-              </li>
-              <li id ="s7">
-                <div class="image"> <a href="#" id="link7"><img id = "hs7" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts7"></span><br />
-                  <span id = "ls7"></span><br /></p>
-                <p class="price"><strong id = "gs7"></strong></p>
-              </li>
-              <li id ="s8">
-                <div class="image"> <a href="#" id="link8"><img id = "hs8" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts8"></span><br />
-                  <span id = "ls8"></span><br /></p>
-                <p class="price"><strong id = "gs8"></strong></p>
-              </li>
-              <li id ="s9">
-                <div class="image"> <a href="#" id="link9"><img id = "hs9" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts9"></span><br />
-                  <span id = "ls9"></span><br /></p>
-                <p class="price"><strong id = "gs9"></strong></p>
-              </li>
-              <li id ="s10">
-                <div class="image"> <a href="#" id="link10"><img id = "hs10" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts10"></span><br />
-                  <span id = "ls10"></span><br /></p>
-                <p class="price"><strong id = "gs10"></strong></p>
-              </li>
-              <li id ="s11">
-                <div class="image"> <a href="#" id="link11"><img id = "hs11" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts11"></span><br />
-                  <span id = "ls11"></span><br /></p>
-                <p class="price"><strong id = "gs11"></strong></p>
-              </li>
-              <li id ="s12">
-                <div class="image"> <a href="#" id="link12"><img id = "hs12" src="" width="100%" height="100%" /></a> </div>
-                <p style ="width: 200px; height: 50px;"> <span id = "ts12"></span><br />
-                  <span id = "ls12"></span><br /></p>
-                <p class="price"><strong id = "gs12"></strong></p>
-              </li>
+              <% book.forEach(function(i){ %>
+                <a href="chitiet-<%= i._id %>"><li>
+                  <% var n=0; images.forEach(function(j){ %>
+                    <% if(j.idbook == i._id && n==0){ %>
+                      <div class="image"><img src="<%= j.imageurl %>" width="100%" height="100%" /></div>
+                    <% n = 1; } %>
+                  <% }) %>
+                  <p style ="width: 200px; height: 50px;"> <span><%= i.bookname %></span><br />
+                    <span>Thể loại: <%= i.booktype %></span><br /></p>
+                  <p class="price"><strong>Giá: <%= i.bookprice %></strong></p>
+                </li></a>
+              <% }) %>
             </ul>
             <div class="cl">&nbsp;</div>
           </div>
@@ -177,12 +142,17 @@
         </div>
          -->
         <!-- Footer -->
-        <div style="margin:auto; width:10%; padding: 10px; font-size:15px;">
-          <a href="page-1"><span id="prevend"><< </span></a>
-          <a id="pr" href="#"><span id="prev">< </span></a>
-          <span id="page"></span>
-          <a id="nx" href="#"><span id="next"> ></span></a>
-          <a id="nxd"href="#"><span id="nextend"> >></span></a>
+        <div style="margin:auto; width:15%; padding: 10px; font-size:15px;">
+          <a href="<%= go %><%= page-1 %>"><div style="width:20px; height:20px; float:left; border:1px solid black; color:white; background-color:#00acbc; font-size:18px;">
+            <p style="margin-left:3px; margin-top:-6px;"> < </p>
+          </div></a>
+          <input type="text" id="page" style="width:30px; height: 20px; float:left; text-align:center;" onchange="gopage()"/>
+          <a id = 'go' href="<%= go %>"><div style="width:25px; height:20px; float:left; border:1px solid black; color:white; background-color:#00bc9a; font-size:15px;">
+            <p style="margin-left:3px; margin-top:-2px;"> Go </p>
+          </div></a>
+          <a href="<%= go %><%= page+1 %>"><div style="width:20px; height:20px; float:left; border:1px solid black; color:white; background-color:#00acbc; font-size:18px;">
+            <p style="margin-left:3px; margin-top:-6px;"> > </p>
+          </div></a>
         </div>
         <div id="footer">
           <div class="left"> <a href="#">Home</a> <span>|</span> <a href="#">Support</a> <span>|</span> <a href="#">My Account</a> <span>|</span> <a href="#">The Store</a> <span>|</span> <a href="#">Contact</a> </div>
@@ -195,8 +165,14 @@
     <!-- End Content -->
   </div>
 </div>
-<script src="js/data.js" type="text/javascript"></script>
-<script src="js/imagesdata.js" type="text/javascript"></script>
+<script>
+  var x = document.getElementById('go').href;
+  document.getElementById('go').href=x + <%= page %>;
+  document.getElementById('page').value = <%= page %>;
+  function gopage(){
+    document.getElementById('go').href= x + document.getElementById('page').value;
+  }
+</script>
 <!-- End Main -->
 </body>
 </html>
