--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -9,10 +9,14 @@
 <script src="js/jquery.jcarousel.pack.js" type="text/javascript"></script>
 <script src="js/jquery.slide.js" type="text/javascript"></script>
 <script src="js/jquery-func.js" type="text/javascript"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- Top -->
-<div id="top">
+<div id="top" >
   <div class="shell">
     <!-- Header -->
     <div id="header">
@@ -29,16 +33,37 @@
     </div>
     <!-- End Header -->
     <!-- Slider -->
-    <div id="slider">
-      <div id="slider-holder">
-        <ul>
-          <li><a href="#"><img src="css/images/slide1.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide2.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide3.jpg" alt="" /></a></li>
-          <li><a href="#"><img src="css/images/slide4.jpg" alt="" /></a></li>
-        </ul>
+    <div id="slider" style="margin-bottom:10px; position:absolute;">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="css/images/slide1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide3.jpg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="css/images/slide4.jpg" alt="Finally">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <div id="slider-nav"> <a href="#" class="prev">Previous</a> <a href="#" class="next">Next</a> </div>
     </div>
     <!-- End Slider -->
   </div>
@@ -70,23 +95,46 @@
           <li><a href="page-1">Danh sách sản phẩm</a></li>
           <li><a href="">Thể loại</a>
             <ul class="typebook">
-              <li style="margin-left:0px;"><a href="theloai-truyenngan">Truyện ngắn</a></li>
-              <li style="margin-left:0px;"><a href="theloai-truyentranh">Truyện tranh</a></li>
-              <li style="margin-left:0px;"><a href="theloai-giaoduc">Giáo dục</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kinangsong">Kĩ năng sống</a></li>
-              <li style="margin-left:0px;"><a href="theloai-kinhte">Kinh tế</a></li>
-              <li style="margin-left:0px;"><a href="theloai-tamly">Tâm lý</a></li>
-              <li style="margin-left:0px;"><a href="theloai-giaokhoa">Sách giáo khoa</a></li>
-              <li style="margin-left:0px;"><a href="theloai-vanhoc">Văn học</a></li>
-              <li style="margin-left:0px;"><a href="theloai-ngoaingu">Ngoại ngữ</a></li>
-              <li style="margin-left:0px;"><a href="theloai-cotich">Truyện cổ tích</a></li>
+              <li><a href="theloai-truyenngan-1">Truyện ngắn</a></li>
+              <li><a href="theloai-truyentranh-1">Truyện tranh</a></li>
+              <li><a href="theloai-giaoduc-1">Giáo dục</a></li>
+              <li><a href="theloai-kinangsong-1">Kĩ năng sống</a></li>
+              <li><a href="theloai-kinhte-1">Kinh tế</a></li>
+              <li><a href="theloai-tamly-1">Tâm lý</a></li>
+              <li><a href="theloai-giaokhoa-1">Sách giáo khoa</a></li>
+              <li><a href="theloai-vanhoc-1">Văn học</a></li>
+              <li><a href="theloai-ngoaingu-1">Ngoại ngữ</a></li>
+              <li><a href="theloai-cotich-1">Truyện cổ tích</a></li>
             </ul>
           </li>
         </ul>
       </div>
       <!-- Tabs -->
+
       <!-- Container -->
-      <div id="container">
+      <div id="container" style="margin-top:-15px;">
+        <div class="tabbed">
+          <!-- First Tab Content -->
+          <div class="items">
+            <div class="cl">&nbsp;</div>
+            <ul>
+              <% book.forEach(function(i){ %>
+                <a href="chitiet-<%= i._id %>"><li>
+                  <% var n=0; images.forEach(function(j){ %>
+                    <% if(j.idbook == i._id && n==0){ %>
+                      <div class="image"><img src="<%= j.imageurl %>" width="100%" height="100%" /></div>
+                    <% n = 1; } %>
+                  <% }) %>
+                  <p style ="width: 200px; height: 50px;"> <span><%= i.bookname %></span><br />
+                    <span>Thể loại: <%= i.booktype %></span><br /></p>
+                  <p class="price"><strong>Giá: <%= i.bookprice %></strong></p>
+                </li></a>
+              <% }) %>
+            </ul>
+            <div class="cl">&nbsp;</div>
+          </div>
+          <!-- End First Tab Content -->
+        </div>
         <!-- Brands
         <div class="brands">
           <h3>Brands</h3>
