--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,37 +7,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ligin</title>
+<title>Đăng ký</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/login.css" rel='stylesheet' type='text/css' media="all" /><!--stylesheet-->
 </head>
 <body>
-<h1>Login</h1>
+<h1>Đăng ký</h1>
 <div class="form-w3ls">
 	<div class="form-head-w3l">
 		<h2>s</h2>
 	</div>
     <div class="tab-content">
         <div id="signin-agile">
-					<form action="#" method="post">
+					<form action="register" method="post">
 
-						<p class="header">User Name</p>
-						<input type="text" name="user" placeholder="Your Full Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Full Name';}" required="required">
+						<p class="header">Tên tài khoản</p>
+						<input type="text" name="username" placeholder="Your Full Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Full Name';}" required="required">
 
-						<p class="header">User Name</p>
-						<input type="text" name="user" placeholder="Your Full Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Full Name';}" required="required">
+						<p class="header">Họ và Tên</p>
+						<input type="text" name="cusname" placeholder="Your Full Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Full Name';}" required="required">
 
-						<p class="header">Email Address</p>
+						<p class="header">Dịa chỉ email</p>
 						<input type="text" name="email" placeholder="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="required">
 
-						<p class="header">Password</p>
+						<p class="header">Mật khẩu</p>
 						<input type="password" name="password" placeholder="Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}" required="required">
 
-						<p class="header">Confirm Password</p>
-						<input type="password" name="password" placeholder="Confirm Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Confirm Password';}" required="required">
+						<p class="header">Nhập lại mật khẩu</p>
+						<input type="password" name="password2" placeholder="Confirm Password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Confirm Password';}" required="required">
 
-						<input type="submit" class="sign-in" value="Sign up">
+						<input type="submit" class="sign-in" value="Đăng ký">
 					</form>
 		</div>
 		<div id="signup-agile">
@@ -45,7 +45,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
     </div><!-- tab-content -->
 </div> <!-- /form -->
-<p class="copyright">&copy; 2018 stylish sign in and sign up Form. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">w3layouts</a></p>
-
+<p class="copyright"></p>
 </body>
 </html>
