--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,7 +4,6 @@
 <title>Wing the Air</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" href="css/chitiet.css" type="text/css" media="all" />
 <!--[if lte IE 6]><style type="text/css" media="screen">.tabbed { height:420px; }</style><![endif]-->
 <script src="js/jquery-1.4.1.min.js" type="text/javascript"></script>
 <script src="js/jquery.jcarousel.pack.js" type="text/javascript"></script>
@@ -24,11 +23,14 @@
       <h1 id="logo"><a href="#">Urgan Gear</a></h1>
       <div id="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">My Account</a></li>
-          <li><a href="#">The Store</a></li>
-          <li class="last"><a href="#">Contact</a></li>
+          <% if(user){ %>
+            <li><a href="">Thông tin tài khoản</a></li>
+            <li><a href="logout">Đăng xuất</a></li>
+          <% } else {%>
+            <li><a href="login">Đăng nhập</a></li>
+            <li><a href="register">Đăng ký</a></li>
+          <% } %>
+          <li class="last"><a href="#">Liên hệ </a></li>
         </ul>
       </div>
     </div>
@@ -76,14 +78,12 @@
     <!-- Search, etc -->
     <div class="options">
       <div class="search">
-        <form action="#" method="post">
-          <span class="field">
-          <input type="text" class="blink" value="SEARCH" title="SEARCH" />
-          </span>
-          <input type="text" class="search-submit" value="GO" />
+        <form action="search" method="post">
+          <input type="text" value="Tên sản phẩm" />
+          <input type="submit" value="Tìm kiếm" />
         </form>
       </div>
-      <span class="left"><a href="#">Advanced Search</a></span>
+
       <div class="right"> <span class="cart"> <a href="#" class="cart-ico">&nbsp;</a> <strong>$0.00</strong> </span> <span class="left more-links"> <a href="#">Checkout</a> <a href="#">Details</a> </span> </div>
     </div>
     <!-- End Search, etc -->
@@ -115,83 +115,40 @@
       <!-- Container -->
       <div id="container" style="margin-top:-15px;">
         <div class="tabbed">
-          <div style="width:400px; height:400px; float:left;">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-              <div class="carousel-inner">
-                <% var n = 0; images.forEach(function(i){
-                  if(n==0){ %>
-                    <div class="carousel-item active">
-                      <img class="d-block w-100" src="<%= i.imageurl %>"  width="400px;" height="400px;">
-                    </div>
-                  <% n=1; } else { %>
-                    <div class="carousel-item">
-                      <img class="d-block w-100" src="<%= i.imageurl %>" width="400px;" height="400px;">
-                    </div>
-                    <% } %>
-                  <% }) %>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+          <!-- First Tab Content -->
+          <div class="items">
+            <div class="cl">&nbsp;</div>
+            <div style="width:200px; height: 300px; float:right;">
+              <p style="font-size: 20px; color:red;"> Tổng số tiền cần thanh toán là: <% var i = 0, s = 0; while(book[i]){ s = s + book[i].bookprice*sl[i]; %>
+
+              <% i = i + 1;} %>
+              <%= s %> VNĐ
+            </p>
+              <a href="thanhtoan"><input type="button" value="Thanh toán" style="width:200px; height:40px; font-size:20px;"/></a>
             </div>
+            <% var i = 0; while(book[i]){ %>
+              <a href="chitiet-<%= i._id %>"><div style="width:700px; height:200px; border-bottom:1px solid black; float:left;">
+                <% var n=0; images.forEach(function(j){ %>
+                  <% if(j.idbook == book[i]._id && n==0){ %>
+                    <div style="float:left; width:160px; height:190px; margin:5px 10px;"><img src="<%= j.imageurl %>" width="100%" height="100%" /></div>
+                  <% n = 1; } %>
+                <% }) %>
+                <div style ="width: 500px; height: 100%; float:left">
+                  <span><%= book[i].bookname %></span><br />
+                  <span>Thể loại: <%= book[i].booktype %></span><br />
+                  <p class="price"><strong>Giá: <%= book[i].bookprice %> VND</strong></p>
+                  <p>Số lượng: <%= sl[i] %></p>
+                  <a href="cartdel-<%= book[i]._id %>">
+                    <input type="button" value="Xoá" />
+                  </a>
+                </div>
+
+              </div></a>
+            <% i = i + 1;} %>
+
+            <div class="cl">&nbsp;</div>
           </div>
-          <div style="float:left; height:320px; margin-left:50px; margin-top: 50px;">
-            <div style="font-size:25px; line-height: 1; width:400px; height:auto">Tên sách: <%= book.bookname %></div>
-            <div id="author">Tác giả: <%= book.author  %></div>
-            <div id="typebook">Thể loại: <%= book.booktype %></div>
-            <div id="bookprice">Giá: <%= book.bookprice %> VNĐ</div>
-            <div id="viewsbook">Lượt xem: <%= book.viewsbook %></div>
-            <div style="width:120px; margin-top:10px; float:left;">
-              <p>Số lượng: </p>
-              <div style="float:left;"><input type="button" name="tru" id="tru" value="&nbsp&nbsp-&nbsp&nbsp" onclick="tru()"/></div>
-              <div style="float:left;"><input align="center" type="text" name="soluong" id="soluong" value="1" size="1" style="text-align:center;" onchange="soluong()"/></div>
-              <div style="float:left;"><input type="button" name="cong" id="cong" value="&nbsp&nbsp+&nbsp&nbsp" onclick="cong()"/></div>
-            </div>
-            <div class="addtocart">
-              <a id="cart" href="cart-<%= book._id %>-1"><img src="css/images/addtocart.png" width="100%" height="100%"/></a>
-            </div>
-            <div class="smile">
-              <img src="css/images/smile.jpg" width="100%" height="100%"/>
-            </div>
-          </div>
-        </div>
-        <div style="margin-top:10px; border-top:dashed 1px #cfcfcf;">
-          <p style="font-size:30px; margin-top:10px;">Giới thiệu sách</p>
-          <p style="font-size: 15px; line-height: 1.5; margin-top:20px;"><%= book.bookcontent %></p>
-        </div>
-        <div style="margin-top:10px; border-top:dashed 1px #cfcfcf;">
-          <p style="font-size:30px; margin-top:10px;">Bình luận</p>
-          <p> Thêm bình luận </p>
-          <form action="comment-<%= book._id %>" method="post">
-          <% if(user){ %>
-            <p>Nội dung</p>
-            <textarea cols="100" rows="2" name="content"></textarea>
-            <input type="submit" value="Gửi" />
-          <%} else{ %>
-            <table>
-              <tr>
-                <td> Tên </td>
-                <td> Nội dung</td>
-              </tr>
-              <tr>
-                <td><input type="text" name="username" style="margin-right:10px; margin-top: -20px;"/></td>
-                <td><textarea cols="100" rows="2" name="content"></textarea></td>
-              </tr>
-              <tr>
-                <td><input type="submit" value="Gửi" /></td>
-                <td></td>
-              </tr>
-            </table>
-          <%}%>
-          </form>
-          <% comment.forEach(function(i){ %>
-            <p style="font-size: 15px; line-height: 1.5; margin-top:20px;"><%= i.name %> : <%= i.content %></p>
-          <%})%>
+          <!-- End First Tab Content -->
         </div>
         <!-- Brands
         <div class="brands">
@@ -211,27 +168,6 @@
     <!-- End Content -->
   </div>
 </div>
-<script src="js/data.js" type="text/javascript"></script>
-<script src="js/imagesdata.js" type="text/javascript"></script>
-<script>
-  function soluong(){
-    if(isNaN(document.getElementById('soluong').value)||document.getElementById('soluong').value<1){
-      document.getElementById('soluong').value = 1;
-      document.getElementById('cart').href = "cart-<%= book._id %>-" + document.getElementById('soluong').value;
-    }
-  }
-  function tru(){
-    if(parseInt(document.getElementById('soluong').value)<=1) document.getElementById('soluong').value = 1;
-    else {
-      document.getElementById('soluong').value = parseInt(document.getElementById('soluong').value) - 1;
-    }
-    document.getElementById('cart').href = "cart-<%= book._id %>-" + document.getElementById('soluong').value;
-  }
-  function cong(){
-    document.getElementById('soluong').value = parseInt(document.getElementById('soluong').value) + 1;
-    document.getElementById('cart').href = "cart-<%= book._id %>-" + document.getElementById('soluong').value;
-  }
-</script>
 <!-- End Main -->
 </body>
 </html>
