--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div class="container">
+      <a href="dangxuat"><div style="width:100px; height:40px; background-color:#4da6ff; float:right; border-radius:0px 0px 10px 10px;">
+      	<p style="margin-top:10px; font-size:15px; margin-left:15px;">Đăng xuất</p>
+      </div></a>
+      <a href="admin"><div style="width:150px; height:40px; margin-right: 10px; background-color:#4da6ff; float:right; border-radius:0px 0px 10px 10px;">
+				<p style="margin-top:10px; font-size:15px; margin-left:15px;">Thông tin cá nhân</p>
+			</div></a>
       <div style="height:100px; width: 100%;"></div>
       <div style="width:250px; height: 500px; float:left;">
         <a href="#"><div class="menu" onclick="funsach()">
@@ -25,6 +31,9 @@
           <a href="themanh"><div class="tab"><span style="margin-left:20px;">Thêm ảnh</span></div></a>
           <a href="xoaanh"><div class="tab"><span style="margin-left:20px;">Xoá ảnh</span></div></a>
         </div>
+        <a href="quanly"><div class="menu" style="margin-top:10px;">
+          <div style="margin: 10px 50px; font-size:18px;">Quản lý đơn hàng</div>
+        </div></a>
       </div>
       <div style="width:800px; height: 500px; margin-left: 60px; float:left; border:1px solid gray;">
         <div style="margin:auto; width:40%; margin-top:20%; font-size:50px;">Do something</div>
