--- a/views/phantrang.ejs
+++ b/views/phantrang.ejs
@@ -147,7 +147,7 @@
                   <% }) %>
                   <p style ="width: 200px; height: 50px;"> <span><%= i.bookname %></span><br />
                     <span>Thể loại: <%= i.booktype %></span><br /></p>
-                  <p class="price"><strong>Giá: <%= i.bookprice %></strong></p>
+                  <p class="price"><strong>Giá: <%= i.bookprice %> VNĐ</strong></p>
                 </li></a>
               <% }) %>
             </ul>
